package ojmChat;

import javax.swing.*;
import java.awt.event.ActionEvent;
import java.awt.event.ActionListener;

public class ClientJoinUI extends JFrame implements ActionListener {
    ClientProtocol cp = null;

    // 선언부
    JLabel label_id = new JLabel("ID Input");
    JLabel label_pw = new JLabel("PW Input");
    JLabel label_pw_ch = new JLabel("PW Check");
    JTextField txt_f_id = new JTextField("hogi");
    JPasswordField txt_f_pw = new JPasswordField("12345");
    JPasswordField txt_f_pw_ch = new JPasswordField("12346");
    JButton btn_re_join = new JButton("Request Join");
    JButton btn_upd_nick = new JButton("Update NickName");
    JButton btn_del_nick = new JButton("Delete NickName");


    // 생성자
    public ClientJoinUI(ClientUI cui) {
        this.cp = cui.cp;
        inDisplay();
    }


    // 화면처리부
    public void inDisplay() {
        btn_re_join.addActionListener(this);
        btn_upd_nick.addActionListener(this);
        btn_del_nick.addActionListener(this);

        // default layout 해제
        this.setLayout(null);

        // ID & Password 입력창 추가
        this.add(label_id);
        this.add(txt_f_id);
        this.add(label_pw);
        this.add(txt_f_pw);
        this.add(label_pw_ch);
        this.add(txt_f_pw_ch);
        label_id.setBounds(35, 60, 185, 40);
        txt_f_id.setBounds(110, 60, 185, 40);
        label_pw.setBounds(35, 110, 185, 40);
        txt_f_pw.setBounds(110, 110, 185, 40);
        label_pw_ch.setBounds(35, 160, 185, 40);
        txt_f_pw_ch.setBounds(110, 160, 185, 40);

        // 동작 버튼 추가
        this.add(btn_re_join);
        this.add(btn_upd_nick);
        this.add(btn_del_nick);
        btn_re_join.setBounds(35, 230, 110,70);
        btn_upd_nick.setBounds(155, 230, 140, 30);
        btn_del_nick.setBounds(155, 270, 140, 30);

        // 윈도우 레이아웃 정의
        this.setTitle("Join Page");
        this.setSize(350, 400);
        this.setDefaultCloseOperation(DISPOSE_ON_CLOSE);
        this.setVisible(false);
    }


    @Override
    public void actionPerformed(ActionEvent e) {
        Object obj = e.getSource();
        String id_join = txt_f_id.getText();
        String pw_join = txt_f_pw.getText();
        String pw_check = txt_f_pw_ch.getText();

        if (obj == btn_re_join && pw_join.equals(pw_check) && !id_join.isEmpty()) {
            cp.sendMsg("Join#" + id_join + "/" + pw_join);
            System.out.println("회원가입 요청");

        } else if (obj == btn_upd_nick && pw_join.equals(pw_check) && !id_join.isEmpty()) {
            cp.sendMsg("Update#" + id_join + "/" + pw_join);
            System.out.println("회원정보 수정");

        } else if (obj == btn_del_nick && pw_join.equals(pw_check) && !id_join.isEmpty()) {
            cp.sendMsg("Delete#" + id_join + "/" + pw_join);

        } else {
            JOptionPane.showMessageDialog(this, "비밀번호가 다릅니다.");
        }
    }
}
